fix: team names spacing

--- a/src/App.css
+++ b/src/App.css
@@ -323,7 +323,7 @@ select {
   width: 50vw;
   text-align: center;
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-items: center;
   gap: 1em;
 }
